--- a/css/media-css.css
+++ b/css/media-css.css
@@ -1,1 +1,1 @@
-@media screen and (max-device-width:768px){.mainPage .my_contacts_info{border-left:none!important;margin-top:0!important}.images_drawing img{height:100%!important}.artWork .photo ul.topic li.active ul{height:910px!important}.icon_separator{border:1px solid maroon;margin:0 6%!important}}
+@media only screen and (max-device-width:768px){.mainPage .my_contacts_info{border-left:none!important;margin-top:0!important}.images_drawing img{height:100%!important}.artWork .photo ul.topic li.active ul{height:910px!important}.icon_separator{border:1px solid maroon;margin:0 6%!important}}
